[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Chandrashekhar Kotekar <shekhar.kotekar@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
reqwest = "0.11"

[dependencies]
actix-web = "4.2.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = {version = "1", features = ["derive"]}